--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.9.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
@@ -23,6 +24,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "lint-staged": "^8.1.5",
+    "standard": "^12.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
